# postcard-bindgen

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  release-plz.toml  typos.toml
.github/workflows/: rust.yml
examples/no_std/: .gitignore  Cargo.toml  README.md  gen-bindings.ps1  gen-bindings.sh
examples/no_std/gen-bindings/: Cargo.toml
examples/no_std/gen-bindings/src/: main.rs
examples/no_std/src/: lib.rs
examples/no_std/test/: index.d.ts  index.js  package.json
postcard-bindgen/: .gitignore  CHANGELOG.md  Cargo.toml  test_js_export.mjs  test_python_export.py
postcard-bindgen-core/: CHANGELOG.md  Cargo.toml
postcard-bindgen-core/src/: lib.rs  npm_package.rs  npm_packet.rs  path.rs  registry.rs  type_info.rs  utils.rs
postcard-bindgen-core/src/code_gen/: available_check.rs  des.rs  export_registry.rs  field_accessor.rs  function.rs  import_registry.rs  mod.rs  ser.rs  switch_case.rs  type_checking.rs  utils.rs  variable_path.rs
postcard-bindgen-core/src/code_gen/generateable/: mod.rs
postcard-bindgen-core/src/code_gen/generateable/binding_tys/: impls.rs  mod.rs
postcard-bindgen-core/src/code_gen/generateable/container/: impls.rs  mod.rs
postcard-bindgen-core/src/code_gen/generateable/js_types/: impls.rs  mod.rs
postcard-bindgen-core/src/code_gen/generateable/types/: array.rs  bool.rs  js_type.rs  map.rs  mod.rs  number.rs  object.rs  optional.rs  range.rs  string.rs  tuple.rs
postcard-bindgen-core/src/code_gen/js/: des.rs  general.rs  mod.rs  ser.rs  type_checks.rs  utils.rs
postcard-bindgen-core/src/code_gen/js/generateable/: mod.rs
postcard-bindgen-core/src/code_gen/js/generateable/container/: enums.rs  impls.rs  mod.rs  structs.rs  tuple_structs.rs  unit_structs.rs
postcard-bindgen-core/src/code_gen/js/generateable/types/: array.rs  bool.rs  js_type.rs  map.rs  mod.rs  number.rs  object.rs  optional.rs  range.rs  string.rs  tuple.rs
postcard-bindgen-core/src/code_gen/js/ser_des/: mod.rs  test.rs
postcard-bindgen-core/src/code_gen/js/type_checking/: mod.rs  ts.rs
postcard-bindgen-core/src/code_gen/python/: des.rs  general.rs  mod.rs  ser.rs  type_checks.rs
postcard-bindgen-core/src/code_gen/python/generateable/: mod.rs
postcard-bindgen-core/src/code_gen/python/generateable/container/: enums.rs  mod.rs  structs.rs  tuple_structs.rs  unit_structs.rs
postcard-bindgen-core/src/code_gen/python/generateable/types/: array.rs  bool.rs  map.rs  mod.rs  number.rs  object.rs  optional.rs  python_type.rs  range.rs  string.rs  tuple.rs
postcard-bindgen-core/src/code_gen/python/ser_des/: mod.rs
postcard-bindgen-core/src/code_gen/python/type_checking/: mod.rs  typing.rs
postcard-bindgen-core/src/code_gen/ser_des/: des.rs  mod.rs  ser.rs  test.rs
postcard-bindgen-core/src/code_gen/type_checking/: mod.rs  strukt.rs  ts.rs  tuple_struct.rs  ty_enum.rs  unit_struct.rs
postcard-bindgen-core/src/gen_src/: package-template.json
postcard-bindgen-core/tests/: javascript.rs  python.rs
postcard-bindgen-core/tests/registry/: mod.rs
postcard-bindgen-core/tests/snapshots/: javascript__des.snap  javascript__des_cjf_module.snap  javascript__runtime_checks.snap  javascript__ser_cjf_module.snap  javascript__ser_with_runtime_checks.snap  javascript__ser_without_runtime_checks.snap  javascript__ts_types.snap  python__des.snap  python__runtime_checks.snap  python__ser_with_runtime_checks.snap  python__ser_without_runtime_checks.snap
postcard-bindgen-derive/: CHANGELOG.md  Cargo.toml
postcard-bindgen-derive/src/: derive_enum.rs  derive_struct.rs  lib.rs
postcard-bindgen-proc-macro/: Cargo.toml
postcard-bindgen-proc-macro/src/: derive_enum.rs  derive_struct.rs  generate_js.rs  lib.rs
postcard-bindgen/examples/: generate_bindings.rs  serde_attributes.rs  small.rs  test_js_export.mjs
postcard-bindgen/src/: export.rs  lib.rs  npm_package.rs
postcard-bindgen/src/package/: mod.rs  npm_package.rs  pip_module.rs
postcard-bindgen/test-bindings-proj/: .gitignore  jsconfig.json  package-lock.json  package.json  tsconfig.json
postcard-bindgen/test-bindings-proj/src/: index.ts
postcard-bindgen/test-package/: index.d.ts  index.js  package.json
postcard-bindings/: Cargo.toml
postcard-bindings-core/: Cargo.toml
postcard-bindings-core/src/: lib.rs
postcard-bindings-core/src/code_gen/: des.rs  ser.rs
postcard-bindings-proc-macro/: Cargo.toml
postcard-bindings-proc-macro/src/: generate_js.rs  lib.rs
postcard-bindings/examples/: generate_bindings.rs
postcard-bindings/src/: lib.rs
postcard-js-lib/: Cargo.toml
postcard-js-lib/src/: lib.rs
postcard-js-lib/src/code_gen/: mod.rs
postcard-js-proc-macro/: Cargo.toml
postcard-js-proc-macro/src/: derive_enum.rs  generate_js.rs  lib.rs
postcard-js-test/: .gitignore  Cargo.toml
postcard-js-test/src/: main.rs
