[package]
name = "postcard-bindgen-core"
version = "0.3.5"
edition = "2021"
authors = ["Alexander Hübener <alex.teamplayer@gmail.com>"]
repository = "https://github.com/teamplayer3/postcard-bindgen.git"
description = "A crate to generate bindings for the postcard binary format for other languages than Rust - Core Crate"
keywords = ["postcard", "generating", "javascript", "serde", "serialize"]
categories = ["embedded", "encoding", "no-std"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

[features]
default = ["generating"]
alloc = []
heapless = ["dep:heapless"]
std = ["alloc"]

generating = ["std", "dep:genco", "dep:convert_case"]

[dependencies.genco]
version = "0.17.8"
optional = true

[dependencies.convert_case]
version = "0.6.0"
optional = true

[dependencies.heapless]
version = "0.8.0"
optional = true
