[package]
name = "postcard-bindgen-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true

description = "A crate to generate bindings for the postcard binary format for other languages than Rust - Core Crate"

[features]
default = ["generating"]

std = ["alloc"]
alloc = []
heapless = ["dep:heapless"]

generating = ["std", "dep:genco", "dep:convert_case", "dep:tree-ds"]

[dependencies.genco]
version = "0.17.10"
optional = true

[dependencies.convert_case]
version = "0.7.0"
optional = true

[dependencies.heapless]
version = "0.8.0"
optional = true

[dependencies.tree-ds]
version = "0.1.6"
optional = true
features = ["auto_id"]

[dev-dependencies.insta]
version = "1.41.1"

[dev-dependencies.with_builtin_macros]
version = "0.1.0"
