[package]
name = "postcard-bindgen-derive"
version = "0.1.3"
edition = "2021"
authors = ["Alexander Hübener <alex.teamplayer@gmail.com>"]
repository = "https://github.com/teamplayer3/postcard-bindgen.git"
description = "A crate to generate bindings for the postcard binary format for other languages than Rust - Derive Crate"
keywords = ["postcard", "generating", "javascript", "serde", "serialize"]
categories = ["embedded", "encoding", "no-std"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

[features]
expanding = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
serde_derive_internals = "0.26"
syn = "1.0.99"
serde = "1"
proc-macro2 = "1.0.43"
genco = "0.17.2"
convert_case = "0.6.0"
regex = "1.6.0"
regex-macro = "0.2.0"

[dependencies.postcard-bindgen-core]
version = "0.1.3"
path = "../postcard-bindgen-core"
default-features = false