[package]
name = "postcard-bindgen-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true

description = "A crate to generate bindings for the postcard binary format for other languages than Rust - Derive Crate"


[features]
expanding = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
serde_derive_internals = "0.29"
syn = "2.0.53"
serde = "1"
proc-macro2 = "1.0"
genco = "0.17.8"
convert_case = "0.6.0"
regex = "1.10.3"
regex-macro = "0.2.0"

[dependencies.postcard-bindgen-core]
version = "0.5.4"
path = "../postcard-bindgen-core"
default-features = false
