[package]
name = "postcard-bindgen"
version = "0.1.2"
edition = "2021"
authors = ["Alexander Hübener <alex.teamplayer@gmail.com>"]
repository = "https://github.com/teamplayer3/postcard-bindgen.git"
description = "A crate to generate bindings for the postcard binary format for other languages than Rust."
keywords = ["postcard", "generating", "javascript", "serde", "serialize"]
categories = ["embedded", "encoding", "no-std"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

[features]
default = []

generating = ["postcard-bindgen-core/generating"]

std = ["postcard-bindgen-core/std"]
alloc = ["postcard-bindgen-core/alloc"]
heapless = ["postcard-bindgen-core/heapless"]

unstable-doc-cfg = []

[dependencies.postcard-bindgen-core]
version = "0.1.2"
path = "../postcard-bindgen-core"

[dependencies.postcard-bindgen-derive]
version = "0.1.2"
path = "../postcard-bindgen-derive"
features = ["expanding"]

[dependencies.doc-cfg]
version = "0.1.0"

[dev-dependencies]
postcard = "1.0.2"
serde = {version = "1.0", features = ["derive"]}

[[example]]
name = "generate_bindings"
required-features = ["std", "generating"]

[package.metadata.docs.rs]
features = ["unstable-doc-cfg", "generating", "std", "heapless"]