[package]
name = "postcard-bindgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true

description = "A crate to generate bindings for the postcard binary format for other languages than Rust."

[features]
default = ["generating"]

generating = [
    "postcard-bindgen-core/generating",
    "postcard-bindgen-derive/expanding",
]

std = ["postcard-bindgen-core/std"]
alloc = ["postcard-bindgen-core/alloc"]
heapless = ["postcard-bindgen-core/heapless"]

[dependencies.postcard-bindgen-core]
version = "0.5.3"
path = "../postcard-bindgen-core"

[dependencies.postcard-bindgen-derive]
version = "0.5.3"
path = "../postcard-bindgen-derive"

[dev-dependencies]
postcard = "1.0.8"
serde = { version = "1.0", features = ["derive"] }
heapless = { version = "0.8.0", features = ["serde"] }

[[example]]
name = "generate_bindings"
required-features = ["std", "generating"]

[[example]]
name = "small"
required-features = ["std", "generating"]

[package.metadata.docs.rs]
features = ["generating", "std", "heapless"]
rustdoc-args = ["--cfg", "docsrs"]
