[package]
name = "postcard-js-proc-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
postcard-js-lib = { version = "0.1.0", path = "../postcard-js-lib"}

quote = "1.0.21"
serde_derive_internals = "0.26"
syn = "1.0.99"
serde = "1"
proc-macro2 = "1.0.43"
genco = "0.17.2"
convert_case = "0.6.0"